Fixed scrolling and overflow inside the Compare Versions modal dialog (#2141)

--- a/src/main/resources/assets/styles/dialog/compare-content-versions-dialog.less
+++ b/src/main/resources/assets/styles/dialog/compare-content-versions-dialog.less
@@ -107,34 +107,59 @@
   }
 
   .modal-dialog-body {
-    max-height: initial;
+    max-height: calc(100% - 200px);
     position: relative;
+    overflow: hidden;
+    padding-bottom: 50px;
 
-    .jsondiffpatch-delta {
+    .dialog-content {
 
-      ul {
-        padding: 0 0 0 10px;
-      }
+      max-height: 100%;
+      overflow-y: auto;
+      overflow-x: hidden;
 
-      &.empty {
+      .jsondiffpatch-delta {
+
         display: block;
 
-        h3 {
+        pre {
+          white-space: pre-wrap;
+        }
+
+        ul {
+          padding: 0 0 0 10px;
+        }
+
+        &.empty {
           display: block;
-          text-align: center;
-          color: @admin-font-gray1;
-          font-family: @admin-font-family;
-          margin-top: 50px;
+
+          h3 {
+            display: block;
+            text-align: center;
+            color: @admin-font-gray1;
+            font-family: @admin-font-family;
+            margin-top: 50px;
+          }
         }
       }
     }
   }
 
-  .container.bottom {
+  .modal-dialog-footer {
     position: absolute;
-    bottom: 45px;
-    right: 30px;
+    bottom: 0;
+    background-color: rgba(255, 255, 255, 0.8);
+    width: 100%;
+    height: 60px;
+    padding: 0;
+
+    .container.bottom {
+      position: absolute;
+      bottom: 25px;
+      right: 30px;
+    }
   }
+
 }
 
 body {
